# Megano

./: README.md
megano/: Dockerfile  db.sqlite3  dbw.sqlite3  docker-compose.yaml  dump.json  pyproject.toml  requirements.txt
megano/api/: filters.py  tests.py  urls.py  utils.py  views.py
megano/database/: db.sqlite3
megano/frontend/: urls.py
megano/manage/: admin.py  models.py
megano/manage/migrations/: 0001_initial.py
megano/megano/: settings.py  sitemaps.py  urls.py
megano/shop/: admin.py  forms.py  models.py  pagination.py  serializers.py  sitemap.py  urls.py  views.py
megano/shop/migrations/: 0001_initial.py  0002_alter_order_delivery_type_alter_order_payment_type.py  0002_category_parent.py  0002_product_sort_index.py  0003_alter_order_delivery_type.py  0003_remove_product_description.py  0003_remove_product_img_image.py  0004_comment_rate.py  0004_rename_delivery_type_order_delivery.py  0005_remove_order_promocode.py  0005_rename_post_image_product.py  0006_image_alt.py  0006_order_email_order_full_name_order_phone.py  0007_alter_image_img.py  0007_alter_order_email_alter_order_full_name_and_more.py  0008_alter_order_payment_type.py  0008_review_sale_specification_tag_remove_comment_product_and_more.py  0009_alter_image_content_type.py  0009_alter_order_user_alter_product_id_and_more.py  0010_alter_product_rating.py  0010_productimage_category_image_delete_image.py  0011_alter_category_image_alter_productimage_image.py  0012_remove_category_products.py  (+40 more)
megano/user/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
(+59 files in other folders)
